--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <script src="https://kit.fontawesome.com/48bdd33a6b.js" crossorigin="anonymous"></script>
     
