Mise à jour: mise en forme générale

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Flavors&family=Nova+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Flavors&family=Nova+Round&family=Nova+Cut&family=Rubik+Distressed&family=Rubik+Iso&family=Satisfy&display=swap" rel="stylesheet">
     
     <script src="https://kit.fontawesome.com/48bdd33a6b.js" crossorigin="anonymous"></script>
 
